# mcp-contract

./: .gitignore  CHANGELOG.md  DESIGN.md  README.md  SPEC.md  pyproject.toml
benchmarks/: README.md  cases.yaml  fetch_mcptox.sh  poison_samples.jsonl  run.py  run_benign.py  run_docker.py  run_pie.py
benchmarks/benign/: benign_cases.yaml  fleet.yaml
benchmarks/benign/events/: fetch-web.jsonl  fs-scope-noise.jsonl  fs-workspace.jsonl  memory-graph.jsonl  time-convert.jsonl  yfinance-report.jsonl
benchmarks/benign/manifests/: fetch.json  time.json  (+3 more)
benchmarks/docker/: Dockerfile.probe
benchmarks/events/: benign-clean.jsonl  confused-ai-inscope.jsonl  env-exfil-fs.jsonl  exfil-arith.jsonl  mitm-fetch.jsonl  path-traversal-fs.jsonl  read-files-arith.jsonl  rug-pull.jsonl  sandbox-escape-arith.jsonl  ssh-key-fetch.jsonl
benchmarks/manifests/: arith.json  fetch.json  filesystem-tampered.json  filesystem.json
demo/: README.md  attacker_sink.py  malicious_server.py  mcp_client.py  run_demo.sh  run_public_demo.sh
demo/notes/: secrets.txt
docs/: DESIGN-egress-proxy.md  OPEN-QUESTIONS.md  policy-mcp-notes.md
docs/research/: GO-FORWARD-0.1.0.md  fleet-config.md  phase-recommendation.md  policy-mcp-schema.md  reporting-formats.md
examples/: egress-proxy-demo.sh  github-action.yml  quickstart.sh
src/mcp_contract/: __init__.py  cli.py  fleet.py  manifest.py  models.py
tests/: test_bcm.py  test_cli.py  test_demo_table.py  test_fleet.py  test_manifest.py  test_pie.py  test_policy_conformance.py  test_policy_io.py  test_proxy.py  test_ral.py  test_report_export.py
(+37 files in other folders)
