[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-contract"
version = "0.1.0"
description = "Treat MCP tool manifests as enforceable contracts: infer least-privilege sandbox policies and monitor runtime behavior for drift."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["mcp", "sandbox", "security", "least-privilege", "policy"]
dependencies = ["PyYAML>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
mcp-contract = "mcp_contract.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
